--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -12,9 +12,9 @@ jobs:
       uses: actions/checkout@master
 
     - name: Copy files to server
-      uses: appleboy/scp-action@master
+      uses: ElenaMoskvina/scp-action@master
       with:
-        host: ${{ secrets.SERVER_HOST }}
+        host: ${{ secrets.localhost }}
         username: ${{ secrets.SERVER_USERNAME }}
         password: ${{ secrets.SERVER_PASSWORD }}
         port: ${{ secrets.SERVER_PORT }}
